由传入url 直接提取pdf的发票信息改为。下载文件解析文档，在交由大模型解析。并且加入审核发票规则

--- a/pom.xml
+++ b/pom.xml
@@ -87,7 +87,19 @@
             <artifactId>fastjson2</artifactId>
             <version>2.0.43</version>
         </dependency>
-<!--        <dependency>-->
+        <dependency>
+            <groupId>org.apache.pdfbox</groupId>
+            <artifactId>pdfbox</artifactId>
+            <version>2.0.24</version>
+        </dependency>
+        <!-- Maven -->
+        <dependency>
+            <groupId>dev.langchain4j</groupId>
+            <artifactId>langchain4j-document-parser-apache-pdfbox</artifactId>
+            <version>1.10.0-beta18</version>
+        </dependency>
+
+        <!--        <dependency>-->
 <!--            <groupId>dev.langchain4j</groupId>-->
 <!--            <artifactId>langchain4j-spring-boot-starter</artifactId>-->
 <!--        </dependency>-->
