--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,9 @@ spring.application.name=invoice-ai
 
 langchain4j.community.dashscope.chat-model.api-key=sk-498167e2ac7e46e898514bdf692bc543
 
-langchain4j.community.dashscope.chat-model.model-name=qwen-plus
+langchain4j.community.dashscope.chat-model.model-name=qwen3-vl-plus
+
+#qwen-max-latest
 # ??? `QwenChatModel` ??
 # ??
 # langchain4j.community.dashscope.temperature=0.7
